[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Sprites/Objects/bloknot.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/Solutions/Solutions.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 2 )

[node name="Solutions" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.09495e-13, 0 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )

[node name="VnutrPolitic" type="Button" parent="."]
margin_left = -208.0
margin_top = -280.0
margin_right = 204.0
margin_bottom = -234.0
custom_fonts/font = SubResource( 1 )
text = "Вн.Политика"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VneshPolitic" type="Button" parent="."]
margin_left = -208.0
margin_top = -234.0
margin_right = 204.0
margin_bottom = -188.0
custom_fonts/font = SubResource( 1 )
text = "Внеш.Политика"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Economic" type="Button" parent="."]
margin_left = -208.0
margin_top = -188.0
margin_right = 204.0
margin_bottom = -142.0
custom_fonts/font = SubResource( 1 )
text = "Экономика"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
visible = false
margin_left = 134.0
margin_top = 307.0
margin_right = 242.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 1 )
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VnutrPolitic" to="." method="_on_VnutrPolitic_pressed"]
[connection signal="pressed" from="VneshPolitic" to="." method="_on_VneshPolitic_pressed"]
[connection signal="pressed" from="Economic" to="." method="_on_Economic_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
